ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker contrast fix

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -346,6 +346,7 @@ span.data-entry-addon {
 	box-shadow: none;}
 .text-success {color:#1e5d16 !important;}
 .btn-link,.helpText {color:#2f6eb1 !important;}
+.btn-link,.helpText {color:#046aa2 !important;}
 /************************
 *************************
 BELOW: SPECIMEN DETAIL STYLES 
